@@ -113,12 +113,12 @@ FIND_PACKAGE_HANDLE_STANDARD_ARGS(MathGL2
 		REQUIRED_VARS MATHGL2_LIBRARY MATHGL2_INCLUDE_DIR
 		VERSION_VAR MATHGL2_VERSION_STRING)
 
-FOREACH(_Component ${MathGL2_FIND_COMPONENTS})
+FOREACH(_Component ${MATHGL2_FIND_COMPONENTS})
 	STRING(TOLOWER ${_Component} _component)
 	STRING(TOUPPER ${_Component} _COMPONENT)
 
-	SET(MathGL2_${_Component}_FIND_REQUIRED ${MathGL2_FIND_REQUIRED})
-	SET(MathGL2_${_Component}_FIND_QUIETLY true)
+	SET(MATHGL2_${_Component}_FIND_REQUIRED ${MATHGL2_FIND_REQUIRED})
+	SET(MATHGL2_${_Component}_FIND_QUIETLY true)
 	# TODO find qt.h for qt4 and qt5 !!!
 	FIND_PATH(MATHGL2_${_COMPONENT}_INCLUDE_DIR
 				NAMES mgl2/${_component}.h
@@ -127,7 +127,7 @@ FOREACH(_Component ${MathGL2_FIND_COMPONENTS})
 				NAMES mgl-${_component}
 				PATHS ${MATHGL2_LIBRARY_DIR} NO_DEFAULT_PATH)
 
-	FIND_PACKAGE_HANDLE_STANDARD_ARGS(MathGL2_${_Component} DEFAULT_MSG
+	FIND_PACKAGE_HANDLE_STANDARD_ARGS(MATHGL2_${_Component} DEFAULT_MSG
 										MATHGL2_${_COMPONENT}_LIBRARY
 										MATHGL2_${_COMPONENT}_INCLUDE_DIR)
 
